docs/tests/typing/bad/testfile-field-7.cpp

class S { public: int a; };
void foo() {}
int main() { (foo()).a; }

